--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,19 +14,20 @@ title: Wallpaper Disco
         <h3><%= pattern['name']%></h3>
         <p><%= pattern["description"] %></p>
         <ul>
-          <li><a target="_blank" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-iPhone-6-and-6-plus.png">▼ iPhone</a></li>
-          <li><a target="_blank" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-android.png">▼ Android</a></li>
-          <li><a target="_blank" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-macbook-pro-15-retina.png">▼ Desktop</a></li> 
-          <li><a target="_blank" href="images/pattern-tiles/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin@2x.png">▼ Repeatable Tile</a></li>            
+          <li><a target="_blank" onclick="_gaq.push(['_trackEvent', '<%= pattern['name']%> iPhone Download', 'Click', 'Pattern Section']);" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-iPhone-6-and-6-plus.png">▼ iPhone</a></li>
+          <li><a target="_blank" onclick="_gaq.push(['_trackEvent', '<%= pattern['name']%> Android Download', 'Click', 'Pattern Section']);" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-android.png">▼ Android</a></li>
+          <li><a target="_blank" onclick="_gaq.push(['_trackEvent', '<%= pattern['name']%> Desktop Download', 'Click', 'Pattern Section']);" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-macbook-pro-15-retina.png">▼ Desktop</a></li> 
+          <li><a target="_blank" onclick="_gaq.push(['_trackEvent', '<%= pattern['name']%> Repeatable Tile Download', 'Click', 'Pattern Section']);" href="images/pattern-tiles/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin@2x.png">▼ Repeatable Tile</a></li>            
         </ul>
       </div>
     </div>
-    <div class="button-pinterest"><a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwallpaperdisco.com%2F%23<%= nameSlug%>&media=http%3A%2F%2Fwallpaperdisco.com%2Fimages%2Fexternal%2F<%= pattern['imageSlug']%>-wallpaper-disco-tom-wahlin-pinterest.png&description=Dance%20up%20your%20desktop%20and%20devices%20with%20Wallpaperdisco.com" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></div>
+    <div class="button-pinterest"><a onclick="_gaq.push(['_trackEvent', '<%= pattern['name']%> Pinterest Share', 'Click', 'Pattern Section']);" href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwallpaperdisco.com%2F%23<%= nameSlug%>&media=http%3A%2F%2Fwallpaperdisco.com%2Fimages%2Fexternal%2F<%= pattern['imageSlug']%>-wallpaper-disco-tom-wahlin-pinterest.png&description=Dance%20up%20your%20desktop%20and%20devices%20with%20Wallpaperdisco.com" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></div>
   </section>
   <% end %>
   <section class="share-interstitial">
     <div class="wrap">
-      Like what you're seeing? Share!
+      <h4>Care to share?</h4>
+      <%= partial "share-widget" %>
     </div>
   </section>
 </div>
