--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -20,6 +20,11 @@
 
 $turquoise: rgba(26, 188, 156,1.0);
 $green-sea: rgba(22, 160, 133,1.0);
+$clouds: rgba(236, 240, 241,1.0);
+$silver: rgba(189, 195, 199,1.0);
+$midnight-blue: rgba(44, 62, 80,1.0);
+$concrete: rgba(149, 165, 166,1.0);
+
 
 
 // ==========================================================================
@@ -50,7 +55,7 @@ $patternAssetNames: wax, cdj, disco-ball;
 //   Transitions
 // ==========================================================================
 
-@mixin transition-all { @include transition-property(all); @include transition-duration(.3s); @include transition-timing-function(ease); }
+@mixin transition-all { @include transition-property(all); @include transition-duration(.2s); @include transition-timing-function(ease); }
 
 // ==========================================================================
 //   Temporary Fonts
