--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -9,7 +9,8 @@
 // ==========================================================================
 
 body {
-  background: #ECF0F1;
+  background: $silver;
+  color: $midnight-blue;
   @include tisa-regular;
 }
 
@@ -19,14 +20,14 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   text-transform: uppercase;
-  color: #666;
+  color: transparentize($midnight-blue, .3);
   @include futura-medium;
+  @include transition-all;
   text-decoration: none;
 }
 
 a:hover {
-  color: #000;
-  border-bottom: 1px solid #000;
+  color: $midnight-blue;
 }
 
 .wrap {
@@ -34,7 +35,7 @@ a:hover {
 }
 
 header {
-  background: #333;
+  background: $midnight-blue;
   padding: 20px 0;
   @include breakpoint(medium) {
     height: 64px;
@@ -55,55 +56,30 @@ header {
       @include futura-book;
       font-size: 36px;
       a {
-        color: #fff;
+        color: $clouds;
       }
       a:hover {
         border: none;
       }
     }
     p {
-      color: #fff;
+      color: $clouds;
       font-size: 11px;
       padding-left: 2px;
       @include breakpoint(medium) {
         font-size: 13px; 
       }
       a {
-        color: #fff;
+        color: $clouds;
         text-transform: capitalize;
       }
       a:hover {
-        border-bottom: 1px solid #fff;
+        border-bottom: 1px solid $clouds;
       }
     }
   }
   h2 {
     float: left;
-  }
-  ul {
-    padding: 22px 0;
-    overflow: hidden;
-    @include breakpoint(medium) {
-      float: right;
-    }
-    li {
-      float: left;
-      margin-right: 16px; 
-      @include breakpoint(medium) {
-        float: right;
-
-      }
-    }
-    .share-twitter {
-      overflow: hidden;
-      width: 76px;
-    }
-    .share-facebook {
-
-    }
-    .share-tumblr {
-
-    }
   }
 }
 
@@ -111,16 +87,23 @@ header {
   background-attachment: fixed;
   background-position: center; 
   height: 600px;
+  background-size: 175px 175px;
+  @include breakpoint(medium) {
+    background-size: 350px 350px;
+  }
 }
 
 .pattern-section {
   position: relative;
   padding: 20px 0;
   .pattern-info {
-    background: transparentize(#fff, .05);
+    background: transparentize( $clouds, .05);
+    border: 1px  solid transparentize($midnight-blue, .9);
     padding: 20px 20px 16px 20px;
     position: relative;
-    max-width: 300px;
+    @include breakpoint(small) {
+      max-width: 300px;
+    }
     h3 {
       font-size: 36px;
       margin-bottom: 12px;
@@ -143,6 +126,76 @@ header {
     right: 20px;
   }
 }
+
+.share-widget {
+  li {
+    a {
+      display: inline-block;
+      color: $clouds;
+      font-size: 16px;
+      background: red;
+      text-align: center;
+      height: 44px;
+      padding-left: 25px;
+      line-height: 44px;
+      border-radius:25px;
+      width: 110px;
+      position: relative;
+      span {
+        background-image: url("../images/site-assets/share-sprite.png");
+        @include image-2x("../images/site-assets/share-sprite@2x.png", 150px, 50px);
+        position: absolute;
+        top: -3px;
+        left: 8px;
+        height:50px;
+        width: 56px;
+      }
+    }
+    a:hover {
+      border: none;
+    }
+  }
+  .share-facebook {
+    a {
+      background-color: #385184;
+      span {
+        background-position: -50px 0;
+      }
+    }
+  }
+  .share-twitter {
+    a {
+      background-color: #55ACEE;
+    }
+  }
+  .share-tumblr {
+    a {
+      background-color: #35465D;
+      span {
+        background-position: -100px 0;
+      }
+    }
+  }
+}
+
+.share-interstitial {
+  background: $clouds;
+  padding: 22px 0;
+  h4 {
+    float: left;
+    font-size: 24px;
+    padding-top: 10px;
+  }
+  .share-widget {
+    overflow: hidden;
+    text-align: center;
+    li {
+      padding: 0 10px;
+      display: inline-block;
+    }
+  }
+}
+
 
 // ==========================================================================
 //   404 page
